# prompt-sentinel

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_CONSOLIDATION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKERHUB.md  Dockerfile  Makefile  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_REPORT.md  README.md  SECURITY.md  TEST_75_PERCENT_ACHIEVED.md  TEST_77_PERCENT_PROGRESS.md  TEST_79_PERCENT_PROGRESS.md  TEST_80_PERCENT_ACHIEVED.md  TEST_83_PERCENT_PROGRESS.md  TEST_85_PERCENT_ACHIEVED.md  TEST_86_PERCENT_PROGRESS.md  TEST_87_PERCENT_PROGRESS.md  TEST_FINAL_STATUS.md  TEST_PROGRESS.md  TEST_STATUS.md  TODO_TESTS.md  bandit-report.json  benchmark_batch_detection.py  benchmark_pattern_optimization.py  benchmark_pattern_quick.py  coverage.xml  docker-compose.redis.yml  docker-compose.yml  experiments.db  performance_profile.json  profile_performance.py  pyproject.toml  requirements.txt  security_scan_report.json  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-manual.yml  docker-publish.yml  docker-publish.yml.disabled  test-docker-auth.yml
.local/: README.md  docker_with_vault.sh  run_secure.sh  setup_vault.sh  vault_loader.py  vault_secure.py
benchmark_results/: batch_detection_results.json  pattern_optimization_results.json  performance_summary.md  simple_benchmark_results.json
config/: custom_pii_rules.yaml
corpus/: initial_corpus.jsonl
deployment/: README.md
deployment/cloudformation/: ecs-fargate.yaml
deployment/helm/: Chart.yaml  values-production.yaml  values.yaml
deployment/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
deployment/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  redis.yaml  secret.yaml  service.yaml
deployment/scripts/: deploy-ecs.sh
deployment/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docker/: README.md
docs/: API_EXAMPLES.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_BEST_PRACTICES.md  MONITORING.md  PERFORMANCE.md  ROADMAP.md  SDK_QUICK_START.md  SDK_RELEASE.md  SECURE_SECRETS.md  TDD.md  TESTING.md  TROUBLESHOOTING.md  custom-pii-rules.md  test_validation_report.md  threat_intelligence.md
docs/integrations/: EXPRESS_INTEGRATION.md  FASTAPI_INTEGRATION.md  LANGCHAIN_INTEGRATION.md
examples/: websocket_client.py
examples/secret_management/: README.md  dotenv_vault_example.py  keyring_example.py  vault_example.py
feeds/config/: default_feeds.yaml
feeds/patterns/: data_exfiltration.json  jailbreak.json  prompt_injection.json  role_manipulation.json
monitoring/: README.md  docker-compose.monitoring.yml
monitoring/grafana/dashboards/: dashboard-provider.yml  promptsentinel-overview.json  promptsentinel-performance.json  promptsentinel-security.json
monitoring/grafana/datasources/: prometheus.yml
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: availability.yml  cost.yml  performance.yml  promptsentinel-alerts.yml  security.yml
scripts/: docker-build.sh  migrate_to_org.sh  performance_profile.py  run_local.sh  security_scan.py  update_copyright.py  update_test_copyright.py
sdk/go/: .gitignore  LICENSE  Makefile  README.md  go.mod
sdk/javascript/: .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json  rollup.config.js  tsconfig.json
sdk/javascript/examples/: basic-usage.ts
sdk/javascript/src/: client.ts  errors.ts  index.ts  types.ts  version.ts
sdk/javascript/tests/: client.test.ts
sdk/python/: README.md  setup.py
sdk/python/examples/: basic_usage.py
sdk/python/tests/: __init__.py  test_client.py  test_threat_intelligence.py
security/: README.md  SECURITY_SCAN_REPORT.md
security/artifacts/npm/: audit-report.json
security/artifacts/sbom/: sbom-status.json
security/artifacts/snyk/: container-report.json  docker-report.json  iac-report.json  python-report.json  sdk-go-report.json  (+2 more)
security/scripts/: generate_report.py  run_security_scan.sh
src/prompt_sentinel/: __init__.py  api_docs.py  main.py
tests/: README.md  benchmark_suite.py  conftest.py  test_accessibility.py  test_analyzer_comprehensive.py  test_anthropic_provider.py  test_api_integration.py  test_api_key_manager.py  test_api_key_manager_comprehensive.py  test_api_versioning.py  test_assignments.py  test_auth_dependencies.py  test_auth_integration.py  test_auth_middleware.py  test_auth_middleware_comprehensive.py  test_auth_routes.py  test_authentication.py  test_benchmarks.py  test_budget_management.py  test_budget_manager.py  test_cache.py  test_cache_manager_comprehensive.py  test_caching.py  test_chaos_engineering.py  test_clustering.py  test_clustering_comprehensive.py  test_collector.py  test_collector_comprehensive.py  test_collectors.py  test_complexity_analyzer.py  test_configuration.py  test_contract_validation.py  test_custom_pii_rules.py  test_data_migration.py  test_data_pipeline.py  test_database_operations.py  test_deployment.py  test_detector.py  test_detector_comprehensive.py  test_distributed_systems.py  (+59 more)
tests/e2e/: test_edge_cases.py  test_health_check.py
tests/fixtures/: attack_vectors.py
tests/future/: test_cache_extended.py  test_prompt_processor_simple.py
tests/infrastructure/: test_docker.py
tests/integration/: test_api_versioning.py  test_auth_flow.py  test_batch_processing.py  test_data_migration.py  test_data_pipeline.py  test_i18n_complete.py  test_observability.py  test_system_integration.py  test_workflow_automation.py
tests/pending/: test_llm_classifier_enhanced.py  test_optimized_cache.py  test_performance_middleware.py  test_security_endpoints.py  test_websocket.py
tests/performance/: benchmark_suite.py  test_performance.py
tests/unit/: test_complexity_analyzer.py
(+156 files in other folders)
